assets/mobilization/css/mobilization.css
a {
    color: #1cb008;
}

a:hover {
    text-decoration: none;
    color: #0a9006;
}



/* Button */

.btn.btn-primary,
.btn-dark,
.btn-border {
    font-size: 13px;
    font-weight: 700;
    letter-spacing: 3px;
    text-transform: uppercase;
    padding: 13px 18px;
    line-height: 1.33;
    border-radius: 3px;
    border: 0;
    -webkit-transition: color 400ms, background-color 400ms, border-color 400ms;
    -o-transition: color 400ms, background-color 400ms, border-color 400ms;
    transition: color 400ms, background-color 400ms, border-color 400ms;
}

.btn-white.btn-primary {
    background: #fff;
    color: #1cb008;
}

.btn.btn-primary {
    background: #1cb008;
    border: 2px solid transparent;
}

.btn.btn-dark {
    color: #0a9006;
    border: 2px solid transparent;
}

.btn-border {
    border: 2px solid #fff;
    background: none;
    color: #fff;
}

.btn-primary:hover,
.btn-dark:hover,
.btn-white.btn-primary:hover {
    background: #0a9006;
    color: #fff;
}

.btn-border:hover {
    background: #1cb008;
    border: 2px solid transparent;
    color: #fff;
}

.general-btn {
    clear: both;
    margin-top: 60px;
}

.intro-content .btn-border {
    margin-right: 15px;
}

/* Footer */
.footer-logo img {
    opacity: 0.25;
}

.attribution {
    color: #aaa;
    font-size: small;
}

.attribution a {
    color: #888;
}

.attribution a:hover {
    color: #444;
}

.bg-overlay {
    background-image: url('../images/mobilization-bg-1.jpg') !important;
}

.bg-overlay > .bg-overlay-gradient {
    background: linear-gradient(145deg, rgba(28, 176, 8, 0.65) 5%, rgba(104, 89, 222, 0.65) 100%) !important;
}

.bg-gray {
    background: #f7f7f7;
}

.countdown > div.counter-day {
    color: #1cb008;
}

.countdown > div.counter-hour {
    color: #1cb008;
}

.countdown > div.counter-minute {
    color: #1cb008;
}

.countdown > div.counter-second {
    color: #1cb008;
}


.banner-content-wrap:before {
    content: '';
    position: absolute;
    top: -65px;
    width: 100%;
    max-width: 380px;
    text-align: center;
    height: 500px;
    left: 50%;
    margin-left: -190px;
    z-index: -1;
    /*border: 18px solid rgba(139, 195, 74, 0.35);*/
    box-sizing: border-box;
    /*box-shadow: 0 60px 40px -40px rgba(0, 0, 0, 0.3);*/
}

/* Countdown
================================================== */

.countdown > div {
    display: inline-block;
    margin: 0 50px;
    text-align: center;
    font-family: Lato, sans-serif;
    width: 100%;
}

.countdown div > span {
    line-height: 100%;
    font-size: 62px;
    font-weight: 700;
    width: 100%;
}

.countdown .smalltext {
    top: 0;
    line-height: 100%;
    font-size: 22px;
    text-transform: uppercase;
    margin-top: 10px;
}

/* Countdown col */

.countdown.countdown-col {
    border-left: 1px solid #dedede;
    border-left: 1px solid rgba(255, 255, 255, 0.1);
    padding-left: 25px;
}

.countdown.countdown-col > div {
    margin: 0 40px 0 0;
}

.countdown.countdown-col div > span {
    font-size: 48px;
}

.countdown.countdown-col .smalltext {
    font-size: 20px;
}

/* Countdown bg */

.countdown.bg-style > div {
    margin: 0 30px;
    width: 70px;
}

.countdown.bg-style div > span {
    font-size: 40px;
    height: 40px;
    line-height: 60px;
    margin-bottom: 15px;
    display: block;
    color: #fff;
}

.countdown.bg-style div > .smalltext {
    font-size: 20px;
    text-transform: capitalize;
}

.properties {
    font-size: 12px;
}


.properties > span {
    margin-right: 20px;
}

